zapata-agentforce/force-app/main/default/objects/Brecha_Conocimiento__c/Brecha_Conocimiento__c.object-meta.xml
<CustomObject>
    <description>P1. Backlog editorial de preguntas sin respuesta. No es aprendizaje automatico.</description>
    <label>Brecha de conocimiento</label>
    <pluralLabel>Brechas de conocimiento</pluralLabel>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Numero de brecha</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>