zapata-agentforce/force-app/main/default/objects/Brecha_Conocimiento__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado del backlog editorial.</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Abierta</fullName>
                    <default>true</default>
                    <label>Abierta</label>
                </value>
                <value>
                    <fullName>En redaccion</fullName>
                </value>
                <value>
                    <fullName>Publicada</fullName>
                </value>
                <value>
                    <fullName>Descartada</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>