zapata-agentforce/force-app/main/default/objects/Brecha_Conocimiento__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <description>Momento de la deteccion.</description>
    <label>Fecha</label>
    <type>DateTime</type>
</CustomField>