zapata-agentforce/force-app/main/default/objects/Brecha_Conocimiento__c/fields/Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia__c</fullName>
    <description>Veces que se repitio la pregunta.</description>
    <label>Frecuencia</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>