zapata-agentforce/force-app/main/default/objects/Brecha_Conocimiento__c/fields/Pregunta__c.field-meta.xml
<CustomField>
    <fullName>Pregunta__c</fullName>
    <description>Pregunta que Knowledge no pudo responder.</description>
    <label>Pregunta</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>