zapata-agentforce/force-app/main/default/objects/Brecha_Conocimiento__c/fields/Subagent__c.field-meta.xml
<CustomField>
    <fullName>Subagent__c</fullName>
    <description>Subagent que detecto la brecha.</description>
    <label>Subagent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Garantia</fullName>
                </value>
                <value>
                    <fullName>Diagnostico</fullName>
                </value>
                <value>
                    <fullName>Agenda</fullName>
                </value>
                <value>
                    <fullName>Compensacion</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>