zapata-agentforce/force-app/main/default/objects/Brecha_Conocimiento__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Subagent__c</columns>
    <columns>Estado__c</columns>
    <columns>Frecuencia__c</columns>
    <columns>Fecha__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>